fix: change align-items value to baseline to address jigsaw validation error

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -559,7 +559,7 @@ footer a {
 
     #about-me {
         display: flex;
-        align-items: top;
+        align-items: baseline;
         justify-content: space-around;
     }
 
